--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -20,6 +20,8 @@ env:
   CARGO_PROFILE_RELEASE_OPT_LEVEL: 3
   CARGO_PROFILE_RELEASE_PANIC: abort
   CARGO_PROFILE_RELEASE_STRIP: true
+  # Allow pkg-config to work when cross-compiling inside containers
+  PKG_CONFIG_ALLOW_CROSS: "1"
 
 defaults:
   run:
@@ -50,19 +52,33 @@ jobs:
             use_cross: false
     env:
       CARGO_HOME: /home/runner/.cargo
+
     steps:
       - name: Log build target
-        run: echo "Building for target ${{ matrix.target }}"
+        run: echo "Building for target ${{ matrix.target }} (use_cross=${{ matrix.use_cross }}) on runner: ${{ matrix.os }}"
 
       - name: Checkout repository
         uses: actions/checkout@v5.0.0
         with:
           fetch-depth: 0
 
-      - name: Set up Rust toolchain
+      - name: Set up QEMU (for cross-container builds)
+        if: ${{ runner.os == 'Linux' && matrix.use_cross == true }}
+        uses: docker/setup-qemu-action@v3.6.0
+
+      - name: Set up Docker Buildx (for cross-container builds)
+        if: ${{ runner.os == 'Linux' && matrix.use_cross == true }}
+        uses: docker/setup-buildx-action@v3
+
+      - name: Set up Rust toolchain (stable) and targets
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: ${{ matrix.target }}
+
+      - name: Ensure rust target is installed (non-cross and defensive)
+        if: ${{ matrix.use_cross == false }}
+        run: |
+          rustup target add ${{ matrix.target }} || true
 
       - name: Enable x86-64-v3 CPU level for x86_64 targets
         if: ${{ contains(matrix.target, 'x86_64') }}
@@ -80,40 +96,84 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-cargo-${{ matrix.target }}-
 
-      - name: Install cross for cross-compilation
+      - name: Install cross for cross-compilation (optional)
         if: ${{ matrix.use_cross == true }}
         uses: taiki-e/install-action@v2.62.28
         with:
           tool: cross
 
-      - name: Enable static linking for Windows targets
-        if: ${{ endsWith(matrix.target, 'windows-msvc') }}
+      - name: Install system OpenSSL dev (Ubuntu native builds)
+        if: ${{ runner.os == 'Linux' && matrix.use_cross == false }}
         run: |
-          echo "RUSTFLAGS=${RUSTFLAGS} -C target-feature=+crt-static" >> "${GITHUB_ENV}"
+          sudo apt-get update
+          # Install minimum system deps that openssl-sys / pkg-config need
+          sudo DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends pkg-config libssl-dev build-essential ca-certificates curl && sudo rm -rf /var/lib/apt/lists/*
 
       - name: Build binary
         working-directory: ./cargocrypt
         run: |
+          set -euxo pipefail
+          # Prefer cross (docker-based) for targets marked use_cross; cross images include system deps
           if [ "${{ matrix.use_cross }}" = "true" ]; then
-            cross build --release --target ${{ matrix.target }}
+            cross build --locked --release --target ${{ matrix.target }}
           else
-            cargo build --release --target ${{ matrix.target }}
+            cargo build --locked --release --target ${{ matrix.target }}
           fi
 
       - name: Strip binary (Linux/macOS)
         if: ${{ runner.os != 'Windows' }}
         run: |
-          strip "cargocrypt/target/${{ matrix.target }}/release/cargocrypt" || echo "Skipping strip (not supported)"
+          set -euxo pipefail
+          BIN_PATH="cargocrypt/target/${{ matrix.target }}/release/cargocrypt"
+          if [ -f "${BIN_PATH}" ]; then
+            strip "${BIN_PATH}" || echo "strip failed or not available; continuing"
+          else
+            echo "Binary not found at ${BIN_PATH}; skipping strip"
+          fi
 
       - name: Strip binary (Windows)
         if: ${{ runner.os == 'Windows' }}
         run: |
-          llvm-strip.exe "cargocrypt/target/${{ matrix.target }}/release/cargocrypt.exe" || echo "Skipping strip (not supported)"
+          set -euxo pipefail
+          BIN_PATH="cargocrypt\\target\\${{ matrix.target }}\\release\\cargocrypt.exe"
+          if [ -f "${BIN_PATH}" ]; then
+            llvm-strip.exe "${BIN_PATH}" || echo "llvm-strip.exe failed or not available; continuing"
+          else
+            echo "Binary not found at ${BIN_PATH}; skipping strip"
+          fi
+
+      - name: Verify artifact exists
+        run: |
+          set -euxo pipefail
+          if [ "${{ runner.os }}" = "Windows" ]; then
+            ART="cargocrypt\\target\\${{ matrix.target }}\\release\\cargocrypt.exe"
+          else
+            ART="cargocrypt/target/${{ matrix.target }}/release/cargocrypt"
+          fi
+          echo "Expecting artifact at: ${ART}"
+          if [ ! -f "${ART}" ]; then
+            echo "ERROR: build artifact not found: ${ART}"
+            ls -la cargocrypt/target || true
+            exit 1
+          fi
+
+      - name: Prepare artifact for upload
+        run: |
+          set -euxo pipefail
+          rm -rf release-artifacts || true
+          mkdir -p release-artifacts
+          if [ "${{ runner.os }}" = "Windows" ]; then
+            cp "cargocrypt\\target\\${{ matrix.target }}\\release\\cargocrypt.exe" release-artifacts/cargocrypt.exe
+            powershell -Command "Compress-Archive -Path release-artifacts\\cargocrypt.exe -DestinationPath release-artifacts\\cargocrypt-${{ matrix.target }}.zip"
+          else
+            cp "cargocrypt/target/${{ matrix.target }}/release/cargocrypt" release-artifacts/cargocrypt
+            tar -C release-artifacts -cSf release-artifacts/cargocrypt-${{ matrix.target }}.tar release-artifacts/cargocrypt || true
+          fi
 
       - name: Upload Rust binary to release
         uses: taiki-e/upload-rust-binary-action@v1.27.0
         with:
-          bin: filecryption
+          bin: cargocrypt
           target: ${{ matrix.target }}
           tar: all
           zip: windows
