--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -20,8 +20,6 @@ env:
   CARGO_PROFILE_RELEASE_OPT_LEVEL: 3
   CARGO_PROFILE_RELEASE_PANIC: abort
   CARGO_PROFILE_RELEASE_STRIP: true
-  # Allow pkg-config to work when cross-compiling inside containers
-  PKG_CONFIG_ALLOW_CROSS: "1"
 
 defaults:
   run:
@@ -55,30 +53,17 @@ jobs:
 
     steps:
       - name: Log build target
-        run: echo "Building for target ${{ matrix.target }} (use_cross=${{ matrix.use_cross }}) on runner: ${{ matrix.os }}"
+        run: echo "Building for target ${{ matrix.target }}"
 
       - name: Checkout repository
         uses: actions/checkout@v5.0.0
         with:
           fetch-depth: 0
 
-      - name: Set up QEMU (for cross-container builds)
-        if: ${{ runner.os == 'Linux' && matrix.use_cross == true }}
-        uses: docker/setup-qemu-action@v3.6.0
-
-      - name: Set up Docker Buildx (for cross-container builds)
-        if: ${{ runner.os == 'Linux' && matrix.use_cross == true }}
-        uses: docker/setup-buildx-action@v3
-
-      - name: Set up Rust toolchain (stable) and targets
+      - name: Set up Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: ${{ matrix.target }}
-
-      - name: Ensure rust target is installed (non-cross and defensive)
-        if: ${{ matrix.use_cross == false }}
-        run: |
-          rustup target add ${{ matrix.target }} || true
 
       - name: Enable x86-64-v3 CPU level for x86_64 targets
         if: ${{ contains(matrix.target, 'x86_64') }}
@@ -96,24 +81,28 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-cargo-${{ matrix.target }}-
 
-      - name: Install cross for cross-compilation (optional)
+      - name: Install cross for cross-compilation
         if: ${{ matrix.use_cross == true }}
         uses: taiki-e/install-action@v2.62.28
         with:
           tool: cross
 
-      - name: Install system OpenSSL dev (Ubuntu native builds)
+      - name: Install system OpenSSL dev for native Linux builds
         if: ${{ runner.os == 'Linux' && matrix.use_cross == false }}
         run: |
           sudo apt-get update
-          # Install minimum system deps that openssl-sys / pkg-config need
-          sudo DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends pkg-config libssl-dev build-essential ca-certificates curl && sudo rm -rf /var/lib/apt/lists/*
+          sudo DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends pkg-config libssl-dev build-essential ca-certificates curl
+          sudo rm -rf /var/lib/apt/lists/*
+
+      - name: Enable static linking for Windows targets
+        if: ${{ endsWith(matrix.target, 'windows-msvc') }}
+        run: |
+          echo "RUSTFLAGS=${RUSTFLAGS} -C target-feature=+crt-static" >> "${GITHUB_ENV}"
 
       - name: Build binary
         working-directory: ./cargocrypt
         run: |
           set -euxo pipefail
-          # Prefer cross (docker-based) for targets marked use_cross; cross images include system deps
           if [ "${{ matrix.use_cross }}" = "true" ]; then
             cross build --locked --release --target ${{ matrix.target }}
           else
@@ -124,57 +113,29 @@ jobs:
         if: ${{ runner.os != 'Windows' }}
         run: |
           set -euxo pipefail
-          BIN_PATH="cargocrypt/target/${{ matrix.target }}/release/cargocrypt"
-          if [ -f "${BIN_PATH}" ]; then
-            strip "${BIN_PATH}" || echo "strip failed or not available; continuing"
+          BIN="cargocrypt/target/${{ matrix.target }}/release/cargocrypt"
+          if [ -f "${BIN}" ]; then
+            strip "${BIN}" || echo "Skipping strip (not supported)"
           else
-            echo "Binary not found at ${BIN_PATH}; skipping strip"
+            echo "Binary not found at ${BIN}; skipping strip"
           fi
 
       - name: Strip binary (Windows)
         if: ${{ runner.os == 'Windows' }}
         run: |
           set -euxo pipefail
-          BIN_PATH="cargocrypt\\target\\${{ matrix.target }}\\release\\cargocrypt.exe"
-          if [ -f "${BIN_PATH}" ]; then
-            llvm-strip.exe "${BIN_PATH}" || echo "llvm-strip.exe failed or not available; continuing"
+          BIN="cargocrypt\\target\\${{ matrix.target }}\\release\\cargocrypt.exe"
+          if [ -f "${BIN}" ]; then
+            llvm-strip.exe "${BIN}" || echo "Skipping strip (not supported)"
           else
-            echo "Binary not found at ${BIN_PATH}; skipping strip"
-          fi
-
-      - name: Verify artifact exists
-        run: |
-          set -euxo pipefail
-          if [ "${{ runner.os }}" = "Windows" ]; then
-            ART="cargocrypt\\target\\${{ matrix.target }}\\release\\cargocrypt.exe"
-          else
-            ART="cargocrypt/target/${{ matrix.target }}/release/cargocrypt"
-          fi
-          echo "Expecting artifact at: ${ART}"
-          if [ ! -f "${ART}" ]; then
-            echo "ERROR: build artifact not found: ${ART}"
-            ls -la cargocrypt/target || true
-            exit 1
-          fi
-
-      - name: Prepare artifact for upload
-        run: |
-          set -euxo pipefail
-          rm -rf release-artifacts || true
-          mkdir -p release-artifacts
-          if [ "${{ runner.os }}" = "Windows" ]; then
-            cp "cargocrypt\\target\\${{ matrix.target }}\\release\\cargocrypt.exe" release-artifacts/cargocrypt.exe
-            powershell -Command "Compress-Archive -Path release-artifacts\\cargocrypt.exe -DestinationPath release-artifacts\\cargocrypt-${{ matrix.target }}.zip"
-          else
-            cp "cargocrypt/target/${{ matrix.target }}/release/cargocrypt" release-artifacts/cargocrypt
-            tar -C release-artifacts -cSf release-artifacts/cargocrypt-${{ matrix.target }}.tar release-artifacts/cargocrypt || true
+            echo "Binary not found at ${BIN}; skipping strip"
           fi
 
       - name: Upload Rust binary to release
         uses: taiki-e/upload-rust-binary-action@v1.27.0
         with:
-          bin: cargocrypt
+          bin: filecryption
           target: ${{ matrix.target }}
           tar: all
           zip: windows
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets. GITHUB_TOKEN }}
