--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -20,6 +20,8 @@ env:
   CARGO_PROFILE_RELEASE_OPT_LEVEL: 3
   CARGO_PROFILE_RELEASE_PANIC: abort
   CARGO_PROFILE_RELEASE_STRIP: true
+  # allow pkg-config to work during cross builds
+  PKG_CONFIG_ALLOW_CROSS: "1"
 
 defaults:
   run:
@@ -53,10 +55,10 @@ jobs:
 
     steps:
       - name: Log build target
-        run: echo "Building for target ${{ matrix.target }}"
+        run: echo "Building for target ${{ matrix.target }} (use_cross=${{ matrix.use_cross }}) on runner: ${{ matrix.os }}"
 
       - name: Checkout repository
-        uses: actions/checkout@v5.0.0
+        uses: actions/checkout@v5
         with:
           fetch-depth: 0
 
@@ -67,8 +69,7 @@ jobs:
 
       - name: Enable x86-64-v3 CPU level for x86_64 targets
         if: ${{ contains(matrix.target, 'x86_64') }}
-        run: |
-          echo "RUSTFLAGS=${RUSTFLAGS} -C target-cpu=x86-64-v3" >> "${GITHUB_ENV}"
+        run: echo "RUSTFLAGS=${RUSTFLAGS} -C target-cpu=x86-64-v3" >> "${GITHUB_ENV}"
 
       - name: Cache Rust dependencies and target
         uses: actions/cache@v4.3.0
@@ -83,7 +84,7 @@ jobs:
 
       - name: Install cross for cross-compilation
         if: ${{ matrix.use_cross == true }}
-        uses: taiki-e/install-action@v2.62.28
+        uses: taiki-e/install-action@v2.62.24
         with:
           tool: cross
 
@@ -96,13 +97,13 @@ jobs:
 
       - name: Enable static linking for Windows targets
         if: ${{ endsWith(matrix.target, 'windows-msvc') }}
-        run: |
-          echo "RUSTFLAGS=${RUSTFLAGS} -C target-feature=+crt-static" >> "${GITHUB_ENV}"
+        run: echo "RUSTFLAGS=${RUSTFLAGS} -C target-feature=+crt-static" >> "${GITHUB_ENV}"
 
       - name: Build binary
         working-directory: ./cargocrypt
         run: |
           set -euxo pipefail
+          # cross (docker-based) handles sysdeps for cross targets; prefer it when requested
           if [ "${{ matrix.use_cross }}" = "true" ]; then
             cross build --locked --release --target ${{ matrix.target }}
           else
@@ -115,7 +116,7 @@ jobs:
           set -euxo pipefail
           BIN="cargocrypt/target/${{ matrix.target }}/release/cargocrypt"
           if [ -f "${BIN}" ]; then
-            strip "${BIN}" || echo "Skipping strip (not supported)"
+            strip "${BIN}" || echo "strip failed or not available; continuing"
           else
             echo "Binary not found at ${BIN}; skipping strip"
           fi
@@ -126,16 +127,44 @@ jobs:
           set -euxo pipefail
           BIN="cargocrypt\\target\\${{ matrix.target }}\\release\\cargocrypt.exe"
           if [ -f "${BIN}" ]; then
-            llvm-strip.exe "${BIN}" || echo "Skipping strip (not supported)"
+            llvm-strip.exe "${BIN}" || echo "llvm-strip.exe failed or not available; continuing"
           else
             echo "Binary not found at ${BIN}; skipping strip"
+          fi
+
+      - name: Verify artifact exists
+        run: |
+          set -euxo pipefail
+          if [ "${{ matrix.os }}" = "Windows" ]; then
+            ART="cargocrypt\\target\\${{ matrix.target }}\\release\\cargocrypt.exe"
+          else
+            ART="cargocrypt/target/${{ matrix.target }}/release/cargocrypt"
+          fi
+          echo "Expecting artifact at: ${ART}"
+          if [ ! -f "${ART}" ]; then
+            ls -la cargocrypt/target || true
+            echo "ERROR: build artifact not found: ${ART}"
+            exit 1
+          fi
+
+      - name: Prepare artifact for upload
+        run: |
+          set -euxo pipefail
+          rm -rf release-artifacts || true
+          mkdir -p release-artifacts
+          if [ "${{ matrix.os }}" = "Windows" ]; then
+            cp "cargocrypt\\target\\${{ matrix.target }}\\release\\cargocrypt.exe" release-artifacts/cargocrypt.exe
+            powershell -Command "Compress-Archive -Path release-artifacts\\cargocrypt.exe -DestinationPath release-artifacts\\cargocrypt-${{ matrix.target }}.zip"
+          else
+            cp "cargocrypt/target/${{ matrix.target }}/release/cargocrypt" release-artifacts/cargocrypt
+            tar -C release-artifacts -cSf release-artifacts/cargocrypt-${{ matrix.target }}.tar release-artifacts/cargocrypt || true
           fi
 
       - name: Upload Rust binary to release
         uses: taiki-e/upload-rust-binary-action@v1.27.0
         with:
-          bin: filecryption
+          bin: cargocrypt
           target: ${{ matrix.target }}
           tar: all
           zip: windows
-          token: ${{ secrets. GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
