--- a/.github/workflows/kani.yml
+++ b/.github/workflows/kani.yml
@@ -1,17 +1,48 @@
-name: Kani
+name: Kani verification
 
-on: 
-  workflow_dispatch: {}  # Allows manual trigger from GitHub Actions UI
-  schedule:
-    - cron: "0 2 * * *"
+# Run on pushes to main/master, PRs targeting main/master, and manual runs
+on:
+  workflow_dispatch:
 
 jobs:
   kani:
+    name: Run Kani verifier
+    # Kani's CI currently supports Ubuntu 20.04 hosts; use that to match the action's expectations.
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+
     steps:
-      - name: Run Kani
+      - name: Checkout repository
+        uses: actions/checkout@v5.0.0
+        with:
+          # ensure submodules are fetched if your project, or kani harnesses, rely on them
+          submodules: recursive
+          fetch-depth: 0
+
+      - name: Run Kani (cargo-kani --tests)
+        # Official Kani GitHub Action; runs `cargo-kani` in the working-directory.
         uses: model-checking/kani-github-action@v1.1
         with:
-          args: '--tests'
-          enable-propproof: true
-          working-directory: './src'
+          # Run the standard cargo-kani command (this action will provision Kani).
+          command: "cargo-kani"
+          # Keep the args the same as your previous run
+          args: "--tests"
+          # IMPORTANT: set working-directory to the repo root ('.') so we don't `cd ./src`
+          working-directory: "."
+          # If you want to pin a specific Kani version uncomment and set kani-version:
+          # kani-version: "0.59.0"
+
+      # Optional (helpful for debugging CI failures): expose the Kani version and workspace layout
+      - name: Show Kani version and workspace (diagnostics)
+        if: failure() || github.event_name == 'workflow_dispatch'
+        run: |
+          echo "=== Workspace root ==="
+          pwd
+          ls -la
+          echo "=== Rust toolchain installed (if any) ==="
+          rustc --version || true
+          cargo --version || true
+          echo "=== Kani binary (if installed by action) ==="
+          which kani || true
+          kani --version || true
