--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,12 @@ publish = false
 [dependencies]
 # rust-crypto = "^0.2"
 orion = { version = "^0.17.11", features = ["default"] }
-base64 = "0.22.1"
+base64 = "^0.22.1"
 #crossterm = "^0.26.0"
 rpassword = "^7.4.0"
 #inotify = "0.10.2"
-tokio = "1.48.0"
-clap = { version = "4.5.51", features = ["derive"] }
-zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
+tokio = "^1.48.0"
+clap = { version = "^4.5.51", features = ["derive"] }
+zeroize = { version = "^1.8.2", features = ["zeroize_derive"] }
 #opaque-ke = "2.0"
 #rand = "^0.8.5"
